--- a/src/index.css
+++ b/src/index.css
@@ -6,10 +6,17 @@ body {
   padding: 2rem;
 }
 
-.header {
-  padding: 60px;
+.Header {
+  margin: auto;
+  max-width: 38rem;
+  padding: 2rem;
   text-align: center;
   background: #89CFF0;
   font-family: Signika Negative SC;
   color: white;
+}
+
+.Header h1 
+{
+  
 }
