--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@ body {
 
 .Header h1 {
   text-align: center;
+  font-size: 37px;
 }
 
 .Header h3 {
@@ -30,10 +31,13 @@ body {
 .Header p {
   text-align: left;
   background: #98FF98;
+  width: 170px;
+  height: 40px;
   border-bottom-right-radius: 38px;
-  background-position: left;
-  
-
+  background-position: top left;
+  padding: 10px;
+  color: #000000;
+  font-family: Roboto;
 }
 
 #box {
@@ -41,13 +45,18 @@ body {
   width: 300px;
   height: 270px;
   list-style-position: inside;
-
 }
 
-.button {
+button {
   background-color: #A6F5FF;
-  border: #89CFF0;
-  color: #FFFFFF;
+  border: 3px solid #89CFF0;
+  color: #000000;
+  font-size: 20px;
+  width: 167px;
+  height: 57px;
+  border-radius: 10px;
+  align-items: center;
+  justify-content: center;
 }
 
 #box ul{
