--- a/src/userPages.css
+++ b/src/userPages.css
@@ -31,19 +31,20 @@ body {
     color: #000000;
     font-family: 'Roboto', sans-serif;
   }
-  .Header #signout {
-    position: fixed;
-    top: 2rem;
-    right: 3rem;
-    margin-top: 0;
-    padding: 14px, 40px;
-    font-family: 'Roboto', sans-serif;
+ .header #signOut {
     background-color: #A6F5FF;
     border: 2px solid #89CFF0;
-    color: black;
-    text-align: center;
-    text-decoration: none;
+    color: #000000;
+    font-size: 20px;
+    width: 10.438rem;
+    height: 3.563rem;
     border-radius: 10px;
+    align-items: center;
+    justify-content: center;
+    margin: 1rem;
+    right: 0.5rem;
+    top: 0.5rem;
+    position: fixed;
   }
   .Header h1 { /*Styling the vaccino title*/
     text-align: center;
@@ -103,7 +104,7 @@ body {
 }
 
 #item1 {
-  right: 33%;
+  right: 31.5%;
   font-size: 1.3em;
   color: #000000;
   font-family: 'Roboto', sans-serif;
@@ -111,23 +112,48 @@ body {
   position: absolute;
 }
 
-.numbers {
+#item2 {
   top: 35rem;
   color:#000000;
   font-family: 'Roboto', sans-serif;
   position: absolute;
   right: 7rem;
   font-size: 1.2em;
+  font-weight: bold;
 }
 
-#item3 {
-  top: 40rem;
+#covidNum {
+  top: 38.2rem;
   color:#000000;
   font-family: 'Roboto', sans-serif;
   position: absolute;
-  right: 7rem;
+  right: 9.5rem;
+  font-size: 1.1em;
+}
+
+#item3 {
+  top: 41rem;
+  color:#000000;
+  font-family: 'Roboto', sans-serif;
+  position: absolute;
+  right: 9rem;
   font-size: 1.2em;
 }
-#user {
-  top: 50%;
+
+#item4 {
+  top: 43rem;
+  color:#000000;
+  font-family: 'Roboto', sans-serif;
+  position: absolute;
+  right: 9rem;
+  font-size: 1.2em;
+}
+
+a {
+  color: #000000;
+  text-decoration: none;
+}
+
+a:hover {
+  color:#98FF98;
 }
