Added exit button, removed title bar

--- a/src/forms.css
+++ b/src/forms.css
@@ -1,6 +1,7 @@
 /*COMPLETED*/
 body {
     background-color: white;
+    overflow: scroll;
   }
   
   .Header { /*blue header at the top of the page*/
