--- a/src/forms.css
+++ b/src/forms.css
@@ -18,6 +18,7 @@ body {
     max-width: 100%;
     margin-bottom: 5%;
     position: absolute;
+    -webkit-app-region: drag;
   }
   
   .Header p { /*Styling the ministry of health logo*/
@@ -42,6 +43,7 @@ body {
     text-align: center;
     font-size: 1.25em;
   }
+  
 
   .loginForm {
     top: 16rem;
