--- a/src/userPages.css
+++ b/src/userPages.css
@@ -16,6 +16,7 @@ body {
     max-width: 100%;
     margin-bottom: 5%;
     position: absolute;
+    -webkit-app-region: drag; /*allows the user to draw the app window around*/
   }
   
   .Header p { /*Styling the ministry of health logo*/
@@ -98,7 +99,7 @@ body {
     font-size: 2em;
     border-radius: 100%;
     display: flex;
-    margin: 33vh auto auto auto;
+    
     position: fixed;
     right: 3rem;
     top: 18rem;
