--- a/src/userPages.css
+++ b/src/userPages.css
@@ -104,8 +104,8 @@ body {
   top: 20%;
   float: right;
 }
-
-#circle { /*ADD FILL WHEN UPDATING THE TRAFFIC LIGHT COLOUR USING PERHAPS JS?*/
+/*
+#circle {
     text-align: center;
     justify-content: center;
     padding: 2em;
@@ -120,10 +120,10 @@ body {
     position: fixed;
     right: 3rem;
     top: 18rem;
-}
+}*/
 
 #item1 {
-  right: 30rem;
+  right: 28rem;
   font-size: 1.3em;
   color: #000000;
   font-family: 'Roboto', sans-serif;
@@ -132,39 +132,40 @@ body {
 }
 
 #item2 {
-  top: 35rem;
+  top: 38rem;
   color:#000000;
   font-family: 'Roboto', sans-serif;
   position: absolute;
-  right: 7rem;
+  right: 10rem;
   font-size: 1.2em;
   font-weight: bold;
 }
 
 #covidNum {
-  top: 37.65rem;
+  top: 41.5rem;
   color:#000000;
   font-family: 'Roboto', sans-serif;
   position: absolute;
-  right: 5.5rem;
+  font-weight: bold;
+  right: 12rem;
   font-size: 1.1em;
 }
 
 #item3 {
-  top: 41rem;
+  top:44rem;
   color:#000000;
   font-family: 'Roboto', sans-serif;
   position: absolute;
-  right: 9rem;
+  right: 10rem;
   font-size: 1.2em;
 }
 
 #item4 {
-  top: 43rem;
+  top: 45.5rem;
   color:#000000;
   font-family: 'Roboto', sans-serif;
   position: absolute;
-  right: 9rem;
+  right: 10rem;
   font-size: 1.2em;
 }
 
@@ -178,7 +179,7 @@ a:hover {
 }
 
 #table {
-  top: 25rem;
+  top: 15rem;
   font-family: 'Roboto', sans-serif;
   position: absolute;
   right: 40%;
@@ -188,11 +189,14 @@ a:hover {
   text-align: center;
   justify-content: center;
   padding: 2em;
-  width: 3em;
-  height: 3em;
+  color: #000000;
+  width: 4em;
+  height: 4em;
   font-size: 2em;
+  border-radius: 100%;
   display: flex;
   position: fixed;
-  right: 8rem;
-  top: 10rem;
-}
+  right: 7.5rem;
+  top: 12.5rem;
+} 
+
