--- a/src/admin.css
+++ b/src/admin.css
@@ -109,10 +109,37 @@ input::-webkit-inner-spin-button {
     border: 1px solid black;
     padding: 10px;
     margin-top: 10px;
+    background-color: rgb(237, 237, 237);
   }
 
   #generatedbugreport{
     padding: 20px;
+  }
+
+  #bugsection{
+    display:flex;
+    position: absolute;
+    left: 13.5%;
+    right: 13.5%;
+  }
+  
+  #logTable{
+    margin-top: 18rem;
+    min-width: 600px;
+    min-height: 500px;
+    padding-left: 50px;
+    font-size: 23px;
+    font-family: 'Roboto', sans-serif;
+  }
+
+  #adminbugreport{
+    margin-top: 18rem;
+    text-align: left;
+    font-size: 23px;
+    min-width: 800px;
+    min-height: 600px;
+    padding: 10px;
+    font-family: 'Roboto', sans-serif;
   }
   
   #adminhomedisplay{
@@ -164,7 +191,7 @@ input::-webkit-inner-spin-button {
     font-size: 15px;
     text-align: center;
     margin-top: 15px;
-    margin-left: 35%;
+    margin-left: 37%;
     margin-right: 50%;
     background-color: #A6F5FF;
     border: 2px solid #89CFF0;
@@ -181,23 +208,13 @@ input::-webkit-inner-spin-button {
     font-family: 'Roboto', sans-serif;
   }
   
-  
   #resolveButton:hover{
 
     background-color: aliceblue;
     color: black;
   }
 
-  #adminbugreport{
-    margin-top: 18rem;
-    text-align: left;
-    font-size: 23px;
-    width: 900px;
-    height: 600px;
-    padding: 10px;
-    font-family: 'Roboto', sans-serif;
-  }
-  
+
   #adminalert{
     margin-top: 18rem;
     text-align: center;
