--- a/src/userPages.css
+++ b/src/userPages.css
@@ -200,3 +200,34 @@ a:hover {
   top: 12.5rem;
 } 
 
+/*Bug Report sizing and positioning*/
+#bugreport{
+  margin-top: 15rem;
+  text-align: center;
+  left: 40%;
+}
+
+/*Bug Report input box sizing*/
+#bugreportinput{
+ width: 600px;
+ height: 230px; 
+ font-size: 15px;
+}
+
+table, td {
+  border: 1px solid black;
+  padding: 6px;
+}
+
+#testtablediv{
+  margin-top: 18rem;
+}
+
+#testtable{
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#generatedbugreport{
+  border: 1px solid black;
+}
