user details function now done

--- a/src/userPages.css
+++ b/src/userPages.css
@@ -298,8 +298,10 @@ table, td {
 #detailsBox #detailContent {
   display: flex;
   float: left;
+  margin-top: 3rem;
   flex-direction: column;
-  margin-left: 2rem;
+  margin-left: 1rem;
+  position: absolute;
 }
 
 #detailContent p {
@@ -307,7 +309,7 @@ table, td {
   color: #000000;
   font-family: 'Roboto', sans-serif;
 }
-
+/* EDIT PROFILE CSS */
 .editProfile {
   position: fixed;
 top: 15rem;
