some css tweaks

--- a/src/userPages.css
+++ b/src/userPages.css
@@ -196,7 +196,7 @@ a:hover {
   top: 20rem;
   font-family: 'Roboto', sans-serif;
   position: absolute;
-  left:28rem;
+  left: 40%;
 }
 
 #TrafficChange{
